Overlapping of download button is prevented for mobile

--- a/content/css/jenkins.css
+++ b/content/css/jenkins.css
@@ -185,7 +185,7 @@ nav form.search .input-group>input.form-control:focus{opacity:1; width:12rem}
     position: relative;
     max-width: 620px;
     padding-left: 210px;
-    top: 65px;
+    top: 50px;
 }
 #ji-home-carousel .carousel-caption.primary:before{
   content:' ';
@@ -231,12 +231,13 @@ nav form.search .input-group>input.form-control:focus{opacity:1; width:12rem}
 }
 
 #ji-download {
- top: 17rem;
+ top: 18rem;
  right: 0;
  left: 0;
  position: absolute;
  z-index: 9;
- text-align: center
+ text-align: center;
+ min-width: 620px
 }
 
 .authors, .authors>.auth {
